# SemCache

./: .gitignore  README.md  pyproject.toml
examples/: smoke_test.py
src/semcache/: __init__.py  cache.py  embeddings.py  storage.py  utils.py
tests/: test_import.py
